<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/white"
android:layout_marginTop="30dp"
tools:context="com.antonioejemplo.casarozas.ActivityRegistro">

<TextView
    android:id="@+id/txtTitulo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="35dp"
    android:typeface="sans"
    android:textStyle="bold|italic"

    android:textSize="20sp"
    android:text="@string/alta_nuevo_registro"/>

<EditText
    android:id="@+id/txt_lugar"
    android:layout_width="300dp"
    android:layout_height="35dp"
    android:textColorHint="#c0607d8b"
    android:layout_marginTop="14dp"
    android:background="@color/md_blue_grey_50"
    android:typeface="sans"
    android:textStyle="bold|italic"
    android:textSize="16sp"

   android:paddingLeft="10dp"
    android:layout_centerHorizontal="true"
    android:hint="@string/introduce_un_lugar"
    android:layout_below="@+id/txtTitulo"
  />


<LinearLayout
    android:id="@+id/linear1"
    android:layout_width="300dp"
    android:layout_height="40dp"
    android:background="@color/md_blue_grey_50"
    android:layout_marginTop="20dp"
    android:layout_below="@+id/txt_lugar"
    android:layout_centerHorizontal="true">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:typeface="sans"
        android:textStyle="bold|italic"

        android:background="@color/md_blue_grey_50"
        android:text="@string/selecciona_un_a_o"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        />

    <Spinner
        android:id="@+id/spinnerAnio"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:background="@color/md_blue_grey_50"

        />
</LinearLayout>


    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@color/md_blue_grey_50"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/linear1"
        android:layout_centerHorizontal="true">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:typeface="sans"
            android:textStyle="bold|italic"

            android:background="@color/md_blue_grey_50"
            android:text="@string/selecciona_un_mes"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            />

        <Spinner
            android:id="@+id/spinnerMes"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            android:background="@color/md_blue_grey_50"

           />
    </LinearLayout>


<EditText
    android:id="@+id/txtComentario"
    android:layout_width="300dp"
    android:layout_height="35dp"
    android:textColorHint="#c0607d8b"
    android:background="@color/md_blue_grey_50"
    android:typeface="sans"
    android:textStyle="bold|italic"

    android:textSize="16sp"
    android:paddingLeft="10dp"
    android:hint="@string/introduce_un_comentario"
    android:layout_marginTop="16dp"
    android:layout_below="@+id/linear2"
    android:layout_alignLeft="@+id/txt_lugar"
    android:layout_alignStart="@+id/txt_lugar"/>


<TextView
    android:id="@+id/txtinfo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/haz_click_para_seleccionar_una_imagen"
    android:layout_below="@+id/txtComentario"
    android:layout_centerHorizontal="true"/>

<ImageView
    android:id="@+id/imgImagen"
    android:layout_width="210dp"
    android:layout_height="190dp"
    android:layout_gravity="center"
    android:layout_marginTop="8dp"
    android:padding="0dp"
    android:scaleType="centerCrop"
    app:srcCompat="@drawable/camera"
    android:layout_below="@+id/txtinfo"
    android:layout_alignLeft="@+id/txtTitulo"
    android:layout_alignStart="@+id/txtTitulo"/>


<Button
    android:id="@+id/btnGuardar"
    android:layout_marginTop="12dp"
    android:layout_width="300dp"
    android:layout_height="35dp"
    android:typeface="sans"
    android:textStyle="bold|italic"
    android:textColor="#c0607d8b"
    android:text="@string/guardar_imagen"

    android:background="@color/md_blue_grey_50"

    android:textSize="15sp"


    android:layout_marginBottom="4dp"
    android:layout_below="@+id/imgImagen"
    android:layout_alignLeft="@+id/txtComentario"
    android:layout_alignStart="@+id/txtComentario"/>
    <!--style="@android:style/Widget.Button.Inset"-->



</RelativeLayout>